Add hierarchical taskset generator implementation with configuration, core, component, task generation, and CSV output

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,10 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# MacOS Finder
+.DS_Store
+
+
+# ignore all generated test files
+Test_Cases/
